--- a/index.html
+++ b/index.html
@@ -1,1 +1,256 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SE206 Course Index - Advanced Agile Software Development</title>
+    <style>
+        body {
+            font-family: sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+        .container {
+            width: 85%; /* Slightly wider */
+            max-width: 1300px; /* Increase max width */
+            margin: 20px auto;
+            background: #fff;
+            padding: 25px 40px;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+        }
+        .header {
+            text-align: center;
+            margin-bottom: 30px;
+            padding-bottom: 15px;
+            border-bottom: 2px solid #0056b3; /* Cairo Uni Blue */
+        }
+        h1 {
+            color: #0056b3;
+            margin-bottom: 5px;
+        }
+        .sub-header {
+             color: #555;
+             font-size: 1.1em;
+             margin-top: 5px;
+        }
+         .instructor-info {
+             font-size: 0.95em;
+             color: #666;
+         }
+        h2 {
+            color: #007bff; /* Lighter Blue */
+            border-bottom: 1px solid #eee;
+            padding-bottom: 8px;
+            margin-top: 35px;
+            margin-bottom: 20px;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+            font-size: 0.9em;
+        }
+        th, td {
+            border: 1px solid #ddd;
+            padding: 10px 12px;
+            text-align: left;
+            vertical-align: top;
+        }
+        th {
+            background-color: #e9ecef;
+            font-weight: bold;
+            color: #495057;
+        }
+        tbody tr:nth-child(odd) {
+            background-color: #f8f9fa;
+        }
+        tbody tr:hover {
+            background-color: #e2e6ea;
+        }
+        a {
+            color: #0056b3;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        /* Adjust column widths */
+        th:nth-child(1), td:nth-child(1) { width: 8%; text-align: center;} /* Unit */
+        th:nth-child(2), td:nth-child(2) { width: 27%; } /* Main Topics */
+        th:nth-child(3), td:nth-child(3) { width: 40%; } /* Key Concepts / Details */
+        th:nth-child(4), td:nth-child(4) { width: 25%; } /* Methodologies / Artifacts / Roles */
+
+        ul {
+            list-style-type: disc;
+            padding-left: 20px;
+            margin-top: 5px;
+            margin-bottom: 5px;
+        }
+        li {
+             margin-bottom: 5px;
+        }
+         .grading-list li strong {
+            color: #28a745; /* Green */
+            display: inline-block;
+            min-width: 40px; /* Align percentages */
+         }
+        .objectives-list li {
+             margin-bottom: 8px;
+        }
+        .note {
+            font-size: 0.9em;
+            color: #6c757d;
+            margin-top: 5px;
+        }
+
+    </style>
+</head>
+<body>
+    <div class="container">
+        <div class="header">
+            <h1>Advanced Agile Software Development</h1>
+            <p class="sub-header">Cairo University - Faculty of Graduate Studies for Statistical Research</p>
+            <p class="sub-header">Course Code: SE206</p>
+            <p class="instructor-info">Instructor: Dr. Atef Raslan (Dr.Atef.Raslan@gmail.com)</p>
+             <!-- Optional: Link to the broader program if known
+             <p class="course-desc">
+                Part of the <a href="[Link to Program]" target="_blank" rel="noopener noreferrer">Software Engineering Professional Master's Degree</a> program.
+             </p>
+             -->
+        </div>
+
+        <h2>Course Syllabus & Outline</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>Unit</th>
+                    <th>Main Topics Covered</th>
+                    <th>Key Concepts / Details</th>
+                    <th>Methodologies / Artifacts / Roles</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td><strong><a href="unit1_intro_principles.html">Unit 1</a></strong></td>
+                    <td>
+                        - Introduction to SDLC & Waterfall<br>
+                        - Agile vs. Traditional Methods<br>
+                        - Agile Manifesto & Principles<br>
+                        - Agile Characteristics & Advantages
+                    </td>
+                    <td>
+                        - Understanding the traditional SDLC limitations.<br>
+                        - Core differences: Fixed Scope (Trad) vs. Fixed Time/Cost (Agile).<br>
+                        - Manifesto Values (Individuals/Interactions, Working Software, Customer Collaboration, Responding to Change).<br>
+                        - 12 Agile Principles (Customer Satisfaction, Welcome Change, Frequent Delivery, Collaboration, Motivation, Face-to-face, Working Software as measure, Constant Pace, Simplicity, Self-organization).<br>
+                        - Characteristics: Iterative, Incremental, Time-bound, Adaptive, People-oriented, Collaborative.<br>
+                        - Benefits: Early value, visibility, issue identification, responsiveness.
+                    </td>
+                    <td>
+                        - Waterfall Model (Contrast)<br>
+                        - Agile Manifesto<br>
+                        - General Agile Concepts
+                    </td>
+                </tr>
+                <tr>
+                    <td><strong><a href="unit2_xp.html">Unit 2</a></strong></td>
+                    <td>
+                        - Extreme Programming (XP)<br>
+                        - XP Lifecycle & Values<br>
+                        - XP Documents & Artifacts<br>
+                        - XP Roles<br>
+                        - XP Practices
+                    </td>
+                    <td>
+                        - Suited for new/incomplete projects with changing requirements.<br>
+                        - Focus on actual development process; designed for small teams.<br>
+                        - Phases: Exploration, Planning, Iterations, Productionizing, Maintenance, Death.<br>
+                        - Values: Communication, Simplicity, Feedback, Courage, Respect.<br>
+                        - Importance of User Stories, Task Lists, CRC Cards, Acceptance Tests, Visible Wall.<br>
+                        - Understanding the responsibilities of different roles.<br>
+                        - Key practices driving XP (Pair Programming, TDD, CI, Short Cycles, etc.).
+                    </td>
+                    <td>
+                        - Methodology: Extreme Programming (XP)<br>
+                        - Artifacts: User Story Cards, Task List, CRC Cards, Acceptance Tests, Visible Wall<br>
+                        - Roles: Manager, Coach, Tracker, Programmer, Tester, Customer<br>
+                        - Practices: Pair Programming, Test-First Dev, Continuous Integration, Sit Together, Weekly Cycle, Slack, Daily Meetings etc.
+                    </td>
+                </tr>
+                 <tr>
+                    <td><strong><a href="unit3_scrum.html">Unit 3</a></strong></td>
+                    <td>
+                        - Scrum Framework<br>
+                        - Scrum Process Flow<br>
+                        - Scrum Artifacts<br>
+                        - Scrum Roles
+                    </td>
+                    <td>
+                        - Handles environmental/technical variables likely to change.<br>
+                        - Suitable for small teams and distributed teams.<br>
+                        - Iterative process: Sprint Planning, Daily Scrum, Development, Sprint Review, Sprint Retrospective.<br>
+                        - Importance and management of Product Backlog & Sprint Backlog.<br>
+                        - Use of Burndown charts for tracking progress.<br>
+                        - Distinct responsibilities of Product Owner, Scrum Master, and Development Team.
+                    </td>
+                    <td>
+                        - Methodology: Scrum<br>
+                        - Artifacts: Product Backlog, Sprint Backlog, Sprint Burndown Chart<br>
+                        - Roles: Product Owner, Scrum Master, Developer (Team Member)<br>
+                        - Events: Sprint Planning, Daily Scrum, Sprint Review, Sprint Retrospective
+                    </td>
+                </tr>
+                 <tr>
+                    <td><strong><a href="unit4_other.html">Unit 4</a></strong></td>
+                    <td>
+                        - Other Agile Methodologies (Overview)<br>
+                        - Agile Estimation<br>
+                        - Success Factors<br>
+                        - XP Enhancements/Evaluation (Briefly)
+                    </td>
+                    <td>
+                        - Awareness of other Agile approaches beyond XP and Scrum.<br>
+                        - Concept of Agile Estimation Techniques (details not provided in slides).<br>
+                        - Identifying factors contributing to Agile project success (details not provided in slides).<br>
+                        - Using XP practices within Scrum; evaluating XP implementation (details not provided in slides).
+                    </td>
+                    <td>
+                        - Methodologies (Mentioned): FDD, AMDD, DSDM, Crystal, ASD, UP<br>
+                         - Concepts: Effort Estimation, Success Factors<br>
+                        <span class="note">(Note: Detailed content for these topics is limited in the source slides)</span>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+
+        <h2>Course Objectives</h2>
+        <ul class="objectives-list">
+            <li>Understand the differences between Agile and Traditional software development models (like Waterfall).</li>
+            <li>Explain the core values and principles outlined in the Agile Manifesto.</li>
+            <li>Describe the key characteristics and advantages of using Agile methodologies.</li>
+            <li>Identify and differentiate various Agile methodologies (XP, Scrum, FDD, DSDM, etc.).</li>
+            <li>Detail the lifecycle, values, roles, practices, and artifacts of Extreme Programming (XP).</li>
+            <li>Detail the process flow, roles, events, and artifacts of the Scrum framework.</li>
+            <li>Recognize the purpose of key Agile documents and artifacts (User Stories, Backlogs, Burndown Charts).</li>
+            <li>Understand the importance of concepts like iteration, incremental delivery, customer collaboration, and responding to change in Agile development.</li>
+        </ul>
+
+         <h2>Assessment Methods</h2>
+         <ul class="grading-list">
+            <li><strong>40%</strong> - Final Exam</li>
+            <li><strong>30%</strong> - Mid-Term Exam</li>
+            <li><strong>10%</strong> - Quiz</li>
+            <li><strong>15%</strong> - Assignments / Projects</li>
+            <li><strong>  5%</strong> - Attendance / Class Participation</li>
+            <li><strong>100%</strong> - Total</li>
+        </ul>
+        <p class="note">Grading distribution as per Slide 4.</p>
+
+    </div>
+</body>
+</html>
