--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td><strong><a href="unit1_intro_principles.html">Unit 1</a></strong></td>
+                    <td><strong><a href="chapters/unit1_intro_principles.html">Unit 1</a></strong></td>
                     <td>
                         - Introduction to SDLC & Waterfall<br>
                         - Agile vs. Traditional Methods<br>
@@ -158,7 +158,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td><strong><a href="unit2_xp.html">Unit 2</a></strong></td>
+                    <td><strong><a href="chapters/unit2_xp.html">Unit 2</a></strong></td>
                     <td>
                         - Extreme Programming (XP)<br>
                         - XP Lifecycle & Values<br>
@@ -183,7 +183,7 @@
                     </td>
                 </tr>
                  <tr>
-                    <td><strong><a href="unit3_scrum.html">Unit 3</a></strong></td>
+                    <td><strong><a href="chapters/unit3_scrum.html">Unit 3</a></strong></td>
                     <td>
                         - Scrum Framework<br>
                         - Scrum Process Flow<br>
@@ -206,7 +206,7 @@
                     </td>
                 </tr>
                  <tr>
-                    <td><strong><a href="unit4_other.html">Unit 4</a></strong></td>
+                    <td><strong><a href="chapters/unit4_other.html">Unit 4</a></strong></td>
                     <td>
                         - Other Agile Methodologies (Overview)<br>
                         - Agile Estimation<br>
