--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
                         - XP (Intro)<br>
                         - Scrum (Intro)<br>
                         - DSDM, FDD, Crystal, ASD, UP (Mentioned)
+                        - strong><a href="chapters/quiz.html">Agile Quiz</a></strong>
                     </td>
                 </tr>
                  <tr>
