--- a/index.html
+++ b/index.html
@@ -141,62 +141,9 @@
                         - strong><a href="chapters/quiz.html">Agile Quiz</a></strong>
                     </td>
                 </tr>
+                 <!-- Unit 4 (Estimation) moved here and becomes Unit 2 -->
                  <tr>
                     <td><strong><a href="chapters/se206_unit2.html">Unit 2</a></strong></td>
-                    <td>
-                        - Extreme Programming (XP)<br>
-                        - XP Lifecycle & Values<br>
-                        - XP Roles & Practices<br>
-                        - XP Documents
-                    </td>
-                    <td>
-                        - Suitability (New/Incomplete projects, Small teams)<br>
-                        - XP Lifecycle Phases (Exploration, Planning, Iterations, Productionizing, Maintenance, Death)<br>
-                        - XP Values (Communication, Simplicity, Feedback, Courage, Respect)<br>
-                        - XP Roles (Manager, Coach, Tracker, Programmer, Tester, Customer)<br>
-                        - XP Practices (Sit Together, Informative Workspace, Pair Programming, Stories, Weekly Cycle, Slack, Test-First, Continuous Integration, Daily Meetings)<br>
-                        - XP Documents (User Stories, Task List, CRC Cards, Acceptance Tests)
-                    </td>
-                    <td>
-                        - Extreme Programming (XP)<br>
-                        - User Stories<br>
-                        - CRC Cards<br>
-                        - Pair Programming<br>
-                        - Test-First Development (TDD)<br>
-                        - Continuous Integration (CI)<br>
-                        - Wall Graphs
-                    </td>
-                 </tr>
-                 <tr>
-                    <td><strong><a href="chapters/se206_unit3.html">Unit 3</a></strong></td>
-                    <td>
-                        - Scrum Framework<br>
-                        - Scrum Process & Roles<br>
-                        - Scrum Artifacts<br>
-                        - Scrum Strengths & Limitations
-                    </td>
-                    <td>
-                        - Scrum for Environmental/Technical Variables<br>
-                        - Suitability (Small/Distributed Teams)<br>
-                        - Scrum Process (Sprint Cycle, Daily Scrum, Sprint Planning, Sprint Review, Sprint Retrospective)<br>
-                        - Scrum Roles (Product Owner, Scrum Master, Development Team)<br>
-                        - Scrum Artifacts (Product Backlog, Sprint Backlog, Burndown Chart, Increment/Shippable Product)<br>
-                        - Strengths (Mgmt Techniques, Scalability via division, Synchronization)<br>
-                        - Limitations (Less focus on dev process)
-                    </td>
-                    <td>
-                        - Scrum<br>
-                        - Sprint<br>
-                        - Product Backlog<br>
-                        - Sprint Backlog<br>
-                        - Daily Scrum (Standup)<br>
-                        - Burndown Chart<br>
-                        - Sprint Review<br>
-                        - Sprint Retrospective
-                    </td>
-                 </tr>
-                  <tr>
-                    <td><strong><a href="chapters/se206_unit4.html">Unit 4</a></strong></td>
                     <td>
                         - Agile Effort Estimation<br>
                         - Large-Scale Challenges<br>
@@ -226,6 +173,63 @@
                         - Iteration Story Points (ISP)
                     </td>
                  </tr>
+                 <!-- Unit 2 (XP) moved here and becomes Unit 3 -->
+                 <tr>
+                    <td><strong><a href="chapters/se206_unit3.html">Unit 3</a></strong></td>
+                    <td>
+                        - Extreme Programming (XP)<br>
+                        - XP Lifecycle & Values<br>
+                        - XP Roles & Practices<br>
+                        - XP Documents
+                    </td>
+                    <td>
+                        - Suitability (New/Incomplete projects, Small teams)<br>
+                        - XP Lifecycle Phases (Exploration, Planning, Iterations, Productionizing, Maintenance, Death)<br>
+                        - XP Values (Communication, Simplicity, Feedback, Courage, Respect)<br>
+                        - XP Roles (Manager, Coach, Tracker, Programmer, Tester, Customer)<br>
+                        - XP Practices (Sit Together, Informative Workspace, Pair Programming, Stories, Weekly Cycle, Slack, Test-First, Continuous Integration, Daily Meetings)<br>
+                        - XP Documents (User Stories, Task List, CRC Cards, Acceptance Tests)
+                    </td>
+                    <td>
+                        - Extreme Programming (XP)<br>
+                        - User Stories<br>
+                        - CRC Cards<br>
+                        - Pair Programming<br>
+                        - Test-First Development (TDD)<br>
+                        - Continuous Integration (CI)<br>
+                        - Wall Graphs
+                    </td>
+                 </tr>
+                 <!-- Unit 3 (Scrum) moved here and becomes Unit 4 -->
+                 <tr>
+                    <td><strong><a href="chapters/se206_unit4.html">Unit 4</a></strong></td>
+                    <td>
+                        - Scrum Framework<br>
+                        - Scrum Process & Roles<br>
+                        - Scrum Artifacts<br>
+                        - Scrum Strengths & Limitations
+                    </td>
+                    <td>
+                        - Scrum for Environmental/Technical Variables<br>
+                        - Suitability (Small/Distributed Teams)<br>
+                        - Scrum Process (Sprint Cycle, Daily Scrum, Sprint Planning, Sprint Review, Sprint Retrospective)<br>
+                        - Scrum Roles (Product Owner, Scrum Master, Development Team)<br>
+                        - Scrum Artifacts (Product Backlog, Sprint Backlog, Burndown Chart, Increment/Shippable Product)<br>
+                        - Strengths (Mgmt Techniques, Scalability via division, Synchronization)<br>
+                        - Limitations (Less focus on dev process)
+                    </td>
+                    <td>
+                        - Scrum<br>
+                        - Sprint<br>
+                        - Product Backlog<br>
+                        - Sprint Backlog<br>
+                        - Daily Scrum (Standup)<br>
+                        - Burndown Chart<br>
+                        - Sprint Review<br>
+                        - Sprint Retrospective
+                    </td>
+                 </tr>
+                 <!-- Unit 5 remains the same -->
                  <tr>
                     <td><strong><a href="chapters/se206_unit5.html">Unit 5</a></strong></td>
                     <td>
