--- a/index.html
+++ b/index.html
@@ -200,61 +200,64 @@
                         - Wall Graphs
                     </td>
                  </tr>
-                 <!-- Unit 3 (Scrum) moved here and becomes Unit 4 -->
+                 <!-- Unit 3 (Scrum) moved here and becomes Unit 4 - Content replaced with summarized E-Gov Framework -->
                  <tr>
                     <td><strong><a href="chapters/se206_unit4.html">Unit 4</a></strong></td>
                     <td>
-                        - Scrum Framework<br>
-                        - Scrum Process & Roles<br>
-                        - Scrum Artifacts<br>
-                        - Scrum Strengths & Limitations
+                        - E-Government Context<br>
+                        - Proposed Agile Framework for E-Gov<br>
+                        - Framework Components (SPM, 4-DAT)<br>
+                        - Implementation & Case Study (BSIC)<br>
+                        - Framework Evaluation
                     </td>
                     <td>
-                        - Scrum for Environmental/Technical Variables<br>
-                        - Suitability (Small/Distributed Teams)<br>
-                        - Scrum Process (Sprint Cycle, Daily Scrum, Sprint Planning, Sprint Review, Sprint Retrospective)<br>
-                        - Scrum Roles (Product Owner, Scrum Master, Development Team)<br>
-                        - Scrum Artifacts (Product Backlog, Sprint Backlog, Burndown Chart, Increment/Shippable Product)<br>
-                        - Strengths (Mgmt Techniques, Scalability via division, Synchronization)<br>
-                        - Limitations (Less focus on dev process)
+                        - E-Government Definition & Challenges<br>
+                        - Proposed Framework Structure & Process Flow<br>
+                        - Agile Software Product Management (SPM) for Requirements<br>
+                        - 4-Dimensional Analytical Tool (4-DAT) for Methodology Selection<br>
+                        - Integration of XP/SCRUM within the Framework<br>
+                        - BSIC Case Study Application<br>
+                        - Evaluation Metrics (Effectivity Score, Satisfaction Surveys)<br>
+                        - Comparison with Traditional Methods
                     </td>
                     <td>
-                        - Scrum<br>
-                        - Sprint<br>
-                        - Product Backlog<br>
-                        - Sprint Backlog<br>
-                        - Daily Scrum (Standup)<br>
-                        - Burndown Chart<br>
-                        - Sprint Review<br>
-                        - Sprint Retrospective
+                        - Proposed E-Gov Framework<br>
+                        - Agile SPM<br>
+                        - 4-DAT<br>
+                        - XP / SCRUM (Integrated)<br>
+                        - ITPOSMO Checklist<br>
+                        - DFD / Use Cases<br>
+                        - SPSS / Likert Scale (for Evaluation)
                     </td>
                  </tr>
-                 <!-- Unit 5 remains the same -->
+                 <!-- Unit 5 content replaced with summarized RE/Quality/Agile Fundamentals -->
                  <tr>
                     <td><strong><a href="chapters/se206_unit5.html">Unit 5</a></strong></td>
                     <td>
-                        - Evaluating XP<br>
-                        - Applying Agile (E-Gov)<br>
-                        - Requirement Engineering in Agile
+                        - Agile Development Fundamentals<br>
+                        - Software Quality Definition & Attributes<br>
+                        - Requirement Engineering (RE) Process<br>
+                        - SRS & Requirement Management
                     </td>
                     <td>
-                        - XP Evaluation Context (Refactoring, Test-First, Pair Programming)<br>
-                        - XP Rules Recap (Planning Game, Small Releases, Metaphor, Simple Design, Testing, Refactoring, Pair Programming, CI, 40-Hour Week, On-Site Customer, Coding Standards)<br>
-                        - GQM (Goal-Question-Metric) Method<br>
-                        - E-Government Definition & Environment<br>
-                        - E-Gov Challenges (Digital Divide, Financial)<br>
-                        - 4-Dimensional Analytical Tools (DAT) for Agile Selection<br>
-                        - Agile SPM (Agile Software Product Management)<br>
-                        - Requirement Engineering Process Overview<br>
-                        - RE in Agile (Feasibility, Elicitation, Specification, Validation, Management)<br>
-                        - SRS Characteristics (Correct, Complete, Consistent, etc.)
+                        - Agile: Iterative, time-boxed, adaptive approach.<br>
+                        - Agile Lifecycle: Plan, Analyze, Design, Code, Test per iteration.<br>
+                        - Software Quality: "Fitness for purpose", satisfying SRS.<br>
+                        - Quality Attributes: Portability, Usability, Reusability, Correctness, Maintainability, etc.<br>
+                        - RE: Defining, documenting, maintaining requirements.<br>
+                        - RE Steps: Feasibility, Elicitation/Analysis, Specification (SRS), Validation, Management.<br>
+                        - SRS: Translates customer needs to technical specs.<br>
+                        - Requirement Categories: Functional, Non-functional.<br>
+                        - Characteristics of Good SRS: Correct, Complete, Consistent, Unambiguous, Verifiable, Traceable, etc.
                     </td>
                     <td>
-                        - GQM Method<br>
-                        - 4-DAT<br>
-                        - Agile SPM<br>
-                        - Requirement Engineering<br>
-                        - SRS (Software Req. Spec)
+                        - Agile Development Cycle Diagram<br>
+                        - SRS Document<br>
+                        - RE Process Flowcharts<br>
+                        - Feasibility Study Types<br>
+                        - Elicitation Techniques<br>
+                        - Validation Techniques (Reviews, Prototyping)<br>
+                        - DFDs, ER Diagrams, Data Dictionaries
                     </td>
                  </tr>
             </tbody>
