--- a/index.html
+++ b/index.html
@@ -141,7 +141,6 @@
                         - strong><a href="chapters/quiz.html">Agile Quiz</a></strong>
                     </td>
                 </tr>
-                 <!-- Unit 4 (Estimation) moved here and becomes Unit 2 -->
                  <tr>
                     <td><strong><a href="chapters/se206_unit2.html">Unit 2</a></strong></td>
                     <td>
@@ -173,7 +172,6 @@
                         - Iteration Story Points (ISP)
                     </td>
                  </tr>
-                 <!-- Unit 2 (XP) moved here and becomes Unit 3 -->
                  <tr>
                     <td><strong><a href="chapters/se206_unit3.html">Unit 3</a></strong></td>
                     <td>
@@ -200,7 +198,6 @@
                         - Wall Graphs
                     </td>
                  </tr>
-                 <!-- Unit 3 (Scrum) moved here and becomes Unit 4 - Content replaced with summarized E-Gov Framework -->
                  <tr>
                     <td><strong><a href="chapters/se206_unit4.html">Unit 4</a></strong></td>
                     <td>
@@ -230,7 +227,6 @@
                         - SPSS / Likert Scale (for Evaluation)
                     </td>
                  </tr>
-                 <!-- Unit 5 content replaced with summarized RE/Quality/Agile Fundamentals -->
                  <tr>
                     <td><strong><a href="chapters/se206_unit5.html">Unit 5</a></strong></td>
                     <td>
@@ -260,6 +256,44 @@
                         - DFDs, ER Diagrams, Data Dictionaries
                     </td>
                  </tr>
+                 <!-- NEW UNIT 6 - TESTING IN AGILE -->
+                 <tr>
+                    <td><strong><a href="chapters/se206_unit6.html">Unit 6</a></strong></td>
+                    <td>
+                        - Fundamentals of Software Testing<br>
+                        - Verification vs. Validation<br>
+                        - Validation & Verification Techniques<br>
+                        - Software Testing Methods & Levels<br>
+                        - Functional & Non-Functional Testing
+                    </td>
+                    <td>
+                        - Definition of Testing (Purpose: find defects, meet requirements).<br>
+                        - ANSI/IEEE 1059 Standard for Testing.<br>
+                        - Roles in Testing (Testers, Developers for Unit Testing).<br>
+                        - Importance of Early Testing in SDLC & Agile (Shift-Left).<br>
+                        - Criteria for Stopping Testing (Deadlines, Coverage, Bug Rate).<br>
+                        - Verification ("Are you building it right?") vs. Validation ("Are you building the right thing?").<br>
+                        - Validation Checks: Range, Length, Type, Format, Limit, Presence, Lookup, Check Digit (ISBN example).<br>
+                        - Verification Checks: Double Entry, Screen/Visual Check.<br>
+                        - Software Testing Methods: Black-Box, White-Box, Grey-Box.<br>
+                        - Testing Levels: Functional Testing (Unit, Integration, System, Regression, Alpha, Beta).<br>
+                        - Non-Functional Testing (Performance, Load, Stress, Usability, Security, Portability).<br>
+                        - Case Study Examples (Test Plan Design for DB fields).
+                    </td>
+                    <td>
+                        - ANSI/IEEE 1059<br>
+                        - SDLC Testing Phases<br>
+                        - Agile Testing (Continuous)<br>
+                        - Unit Testing<br>
+                        - Test Plan Design<br>
+                        - Validation Rules<br>
+                        - Check Digit Algorithm (e.g., ISBN)<br>
+                        - Black-Box, White-Box, Grey-Box Testing<br>
+                        - Functional Testing Types<br>
+                        - Non-Functional Testing Types<br>
+                        - Testing Tools (e.g., Selenium, HP QTP, IBM RFT, SilkTest, TestComplete, WinRunner, LoadRunner, WATIR, Visual Studio Test Pro)
+                    </td>
+                 </tr>
             </tbody>
         </table>
 
@@ -272,11 +306,10 @@
             <li>Explore techniques for Agile effort estimation (Story Points, COCOMO adaptations).</li>
             <li>Learn about applying and evaluating Agile practices (GQM, 4-DAT).</li>
             <li>Understand Requirement Engineering concepts within an Agile context.</li>
-            <!-- Add specific objectives from the PDF if needed -->
+            <li>Master the fundamentals of software testing within Agile environments, including verification, validation, and various testing levels and methods.</li>
         </ul>
 
          <h2>Grading</h2>
-         <!-- Based on Slide 4 -->
         <ul>
             <li><strong>40%</strong>: Final Exam</li>
             <li><strong>30%</strong>: Mid-Term Exam</li>
@@ -289,7 +322,6 @@
         <h2>Assignments</h2>
         <ul>
             <li>(Assignments and Projects details will be provided during the course)</li>
-            <!-- Specific assignments are not detailed in the provided PDF excerpts -->
         </ul>
     </div>
 </body>
